src/objects/QPMS__Inspection_Reference_Junction__c.object
<CustomObject>
    <description>Reference junction object for Inspection management.</description>
    <fields>
        <fullName>QPMS__Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>Inspection Reference Junctions</relationshipLabel>
        <relationshipName>Inspection_Reference_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA</label>
        <referenceTo>QPMS__CAPA__c</referenceTo>
        <relationshipLabel>Inspection Reference Junctions</relationshipLabel>
        <relationshipName>Inspection_Reference_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Management</label>
        <referenceTo>QPMS__Change_Management__c</referenceTo>
        <relationshipLabel>Inspection Reference Junctions</relationshipLabel>
        <relationshipName>Inspection_Reference_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>QPMS__Complaint__c</referenceTo>
        <relationshipLabel>Inspection Reference Junctions</relationshipLabel>
        <relationshipName>Inspection_Reference_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Profile</label>
        <referenceTo>QPMS__Document_Profile__c</referenceTo>
        <relationshipLabel>Inspection Reference Junctions</relationshipLabel>
        <relationshipName>Inspection_Reference_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__InspectionParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InspectionParent</label>
        <referenceTo>QPMS__Inspection__c</referenceTo>
        <relationshipLabel>Inspection Reference Junctions (InspectionParent)</relationshipLabel>
        <relationshipName>Inspection_Reference_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>QPMS__Inspection__c</referenceTo>
        <relationshipLabel>Inspection Reference Junctions</relationshipLabel>
        <relationshipName>Inspection_Reference_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-Conformance</label>
        <referenceTo>QPMS__Non_Conformance__c</referenceTo>
        <relationshipLabel>Inspection Reference Junctions</relationshipLabel>
        <relationshipName>Inspection_Reference_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Reference__c</fullName>
        <formula>IF(NOT(ISBLANK( QPMS__Non_Conformance__c )), ( QPMS__Non_Conformance__r.QPMS__Non_Conformance_Name__c ) , IF(NOT(ISBLANK( QPMS__CAPA__c )), ( QPMS__CAPA__r.QPMS__CAPA_Name__c ) ,
IF(NOT(ISBLANK( QPMS__Document_Profile__c )), ( QPMS__Document_Profile__r.Name ) , IF(NOT(ISBLANK( QPMS__Change_Management__c )), ( QPMS__Change_Management__r.QPMS__CR_Name__c) , IF(NOT(ISBLANK( QPMS__Audit__c )), ( QPMS__Audit__r.Name) , IF(NOT(ISBLANK( QPMS__Complaint__c )), ( QPMS__Complaint__r.Name) , IF(NOT(ISBLANK( QPMS__InspectionParent__c )), ( QPMS__InspectionParent__r.Name) , &apos;&apos; ) ))))))</formula>
        <label>Reference</label>
        <type>Text</type>
    </fields>
    <label>Inspection Reference Junction</label>
    <nameField>
        <label>Inspection Reference Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Reference Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>